--- a/deployment.yaml
+++ b/deployment.yaml
@@ -119,7 +119,7 @@ spec:
           value: dev
         - name: WITHOUT_DEMO
           value: "false"
-        image: smoosedev/odoo_nwb:93cfde658e21aaa8
+        image: smoosedev/odoo_fid:45af248b2008ad6d
         imagePullPolicy: IfNotPresent
         name: odoo
         ports:
@@ -206,7 +206,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: odoo-nwb.smoose.cloud
+  - host: odoo-fid.smoose.cloud
     http:
       paths:
       - backend:
@@ -225,5 +225,5 @@ spec:
         pathType: ImplementationSpecific
   tls:
   - hosts:
-    - odoo-nwb.smoose.cloud
-    secretName: odoo-nwb-smoose-cloud-tls
+    - odoo-fid.smoose.cloud
+    secretName: odoo-fid-smoose-cloud-tls
