--- a/deployment.yaml
+++ b/deployment.yaml
@@ -11,8 +11,7 @@ data:
               - "sh -c 'psql -c \"CREATE EXTENSION pg_trgm;\"'"
           addons:
             upgrade:
-              - nwb_base
-              - nwb_install
+              - fid_install
 kind: ConfigMap
 metadata:
   name: migration-config
