--- a/deployment.yaml
+++ b/deployment.yaml
@@ -12,6 +12,10 @@ data:
           addons:
             upgrade:
               - fid_install
+        - version: 0.0.2
+          addons:
+            upgrade:
+              - fid_install
 kind: ConfigMap
 metadata:
   name: migration-config
