Added kwkhtmltopdf url

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -122,6 +122,8 @@ spec:
           value: dev
         - name: WITHOUT_DEMO
           value: "false"
+        - name: KWKHTMLTOPDF_SERVER_URL
+          value: https://wkhtmltopdf.smoose.cloud
         image: smoosedev/odoo_fid:45af248b2008ad6d
         imagePullPolicy: IfNotPresent
         name: odoo
