updated image tag to 3dc82dc4b14334ef

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,6 +20,10 @@ data:
           addons:
             upgrade:
               - fid_install
+        - version: 0.0.4
+          addons:
+            upgrade:
+              - fid_install
 kind: ConfigMap
 metadata:
   name: migration-config
